--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+body {
+ background-color: bisque;
 
+}
+
+h1 {
+    font-size: 30px; 
+}
+.div1 {
+    flex: 0%;
+   padding: 20rem;
+   margin-left: 15rem;
+}
